Added SimpleLoader back in, general code cleanup, ReflectionUtil improved, fixed 1.12.2 npc bug